# golem-rust

./: .gitignore  Cargo.toml  README.md
golem-rust/: Cargo.toml
golem-rust-example/src/: main.rs
golem-rust-examples/: Cargo.toml  build.rs
golem-rust-examples/.golem/: api.wit  bindgen.rs
golem-rust-examples/src/: main.rs
golem-rust-macro/: Cargo.toml
golem-rust-macro/src/: golem.rs  lib.rs  wit_gen.rs
golem-rust/src/: der_macro.rs  lib.rs  macroutils.rs  tuple.rs  wit_gen.rs
golem-rust/src/transaction/: compfn.rs
golem-rust/src/wit/: into_wit.rs  mod.rs  model.rs
src/: der_macro.rs  lib.rs  wit_gen.rs
