[package]
name = "golem-rust-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
golem-rust = { path = "../golem-rust" }
linkme = "0.3.26"
wit-bindgen = "0.24.0"


[build-dependencies]
golem-rust = { path = "../golem-rust" }
